fixed vitals not being vertically aligned to the inventory, so lorenz doesn't get triggered

--- a/Code/UI/Vitals/Vitals.razor.scss
+++ b/Code/UI/Vitals/Vitals.razor.scss
@@ -14,6 +14,7 @@ Vitals
 		left: $deadzone-x;
 		flex-direction: row;
 		gap: $deadzone-x;
+		height: 96px;
 	}
 
 	.ammo
